--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -6,14 +6,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Admin</title>
+  <title>{{ .AppName }} Administration</title>
   <link rel="stylesheet" href="css/style.css">
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
   <section class="container">
     <div class="login">
-      <h1>Formlark Administration</h1>
+        <h1>{{ .AppName }} Administration</h1>
         <p>Welcome, {{ .User }}</p>
     </div>
   </section>
