--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -6,16 +6,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Login Form</title>
+  <title>{{ .AppName }} Login</title>
   <link rel="stylesheet" href="css/style.css">
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
   <section class="container">
     <div class="login">
-      <h1>Login to Web App</h1>
+        <h1>{{ .AppName }} Login</h1>
       <form method="post" action="{{ .URLLogin }}">
-        <p><input type="text" name="user" value="" placeholder="Username or Email"></p>
+        <p><input type="text" name="user" value="" placeholder="Username"></p>
         <p><input type="password" name="pass" value="" placeholder="Password"></p>
         <p class="remember_me">
           <label>
