Created exported/unexported template convention. Corrected support for index.html templates. Corrected execute function handling of slash prefixes and suffixes. Updated templates and handlers.

--- a/templates/admin/base.tmpl.html
+++ b/templates/admin/base.tmpl.html
@@ -2,12 +2,8 @@
 <!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
-<head>
-    {{ template "head" . }}
-</head>
-<body>
-    {{ template "body" . }}
-</body>
+<!--[if gt IE 8]><!-->
+<html lang="en"> <!--<![endif]-->
+<head>{{ template "head" . }}</head>
+<body>{{ template "body" . }}</body>
 </html>
-
