--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,31 +1,21 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ .AppName }} Login</title>
-  <link rel="stylesheet" href="css/style.css">
-  <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-</head>
-<body>
-  <section class="container">
+{{ include "base.tmpl.html" }}
+{{ include "head.tmpl.html" }}
+
+{{ define "body" }}
+<section class="container">
     <div class="login">
         <h1>{{ .AppName }} Login</h1>
-      <form method="post" action="{{ .URLLogin }}">
-        <p><input type="text" name="user" value="" placeholder="Username"></p>
-        <p><input type="password" name="pass" value="" placeholder="Password"></p>
-        <p class="remember_me">
-          <label>
-            <input type="checkbox" name="remember_me" id="remember_me">
-            Remember me on this computer
-          </label>
-        </p>
-        <p class="submit"><input type="submit" name="commit" value="Login"></p>
-      </form>
+        <form method="post" action="{{ .URLLogin }}">
+            <p><input type="text" name="user" value="" placeholder="Username"></p>
+            <p><input type="password" name="pass" value="" placeholder="Password"></p>
+            <p class="remember_me">
+                <label>
+                    <input type="checkbox" name="remember_me" id="remember_me">
+                    Remember me on this computer
+                </label>
+            </p>
+            <p class="submit"><input type="submit" name="commit" value="Login"></p>
+        </form>
     </div>
-  </section>
-</body>
-</html>
+</section>
+{{ end }}
