--- a/templates/admin/test.html
+++ b/templates/admin/test.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ .AppName }} Administration</title>
-  <link rel="stylesheet" href="css/style.css">
-  <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-</head>
-<body>
+{{ include "base.tmpl.html" }}
+{{ include "head_alt.tmpl.html" }}
+
+{{ define "body" }}
   <section class="container">
     <div class="login">
         <h1>{{ .AppName }} Administration</h1>
         <p>{{ .Misc }}</p>
     </div>
   </section>
-</body>
-</html>
+{{ end }}
