Added asset routes and handlers.  Added assets.  Updated templates and added navigation.  Updated page data to handle nav.

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,7 +1,11 @@
-{{ include "base.tmpl.html" }}
+{{ include "/base.tmpl.html" }}
 {{ include "head.tmpl.html" }}
+{{ include "menu_main.tmpl.html" }}
 
-{{ define "body" }}
+{{ define "content" }}
+  <section class="container">
+      {{ template "menu_main" . }}
+  </section>
   <section class="container">
     <div class="login">
         <h1>{{ .AppName }} Administration</h1>
