--- a/templates/admin/test.html
+++ b/templates/admin/test.html
@@ -1,7 +1,7 @@
-{{ include "base.tmpl.html" }}
+{{ include "/base.tmpl.html" }}
 {{ include "head_alt.tmpl.html" }}
 
-{{ define "body" }}
+{{ define "content" }}
   <section class="container">
     <div class="login">
         <h1>{{ .AppName }} Administration</h1>
