--- a/templates/admin/head.tmpl.html
+++ b/templates/admin/head.tmpl.html
@@ -2,6 +2,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>{{ .AppName }} Administration</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="/assets/protected/css/mdl.io_1.0.4_blue-lightblue.min.css">
 <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 {{ end }}
