--- a/templates/base.tmpl.html
+++ b/templates/base.tmpl.html
@@ -7,10 +7,10 @@
 <html lang="en"> <!--<![endif]-->
 <head>{{ template "head" . }}</head>
 <body>
-    <div class="mdl-layout mdl-js-layout">
-        <header class="mdl-layout__header mdl-layout__header--scroll">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+        <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
-                <span class="mdl-layout-title">Title</span>
+                <span class="mdl-layout-title">{{ .AppName }}</span>
                 <div class="mdl-layout-spacer"></div>
                 <nav class="mdl-navigation">
                     {{ template "nav" .NavHeader }}
