--- a/templates/admin/head.tmpl.html
+++ b/templates/admin/head.tmpl.html
@@ -1,7 +1,12 @@
 {{ define "head" }}
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>{{ .AppName }} Administration</title>
+
 <link rel="stylesheet" href="/assets/protected/css/mdl.io_1.0.4_blue-lightblue.min.css">
+<script src="/assets/public/js/material.min.js"></script>
+<link rel="stylesheet" href="/assets/public/css/material_icons.css">
 <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 {{ end }}
