--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,15 +1,12 @@
 {{ include "/base.tmpl.html" }}
 {{ include "head.tmpl.html" }}
-{{ include "menu_main.tmpl.html" }}
 
 {{ define "content" }}
-  <section class="container">
-      {{ template "menu_main" . }}
-  </section>
-  <section class="container">
-    <div class="login">
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--1-col-tablet mdl-cell--0-col-phone"></div>
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet mdl-cell--12-col-phone">
         <h1>{{ .AppName }} Administration</h1>
         <p>Welcome, {{ .User }}</p>
-    </div>
-  </section>
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--0-col-tablet mdl-cell--0-col-phone"></div>
+</div>
 {{ end }}
