Added login to anon.  Started fleshing out handlers.  Added auth/admin login handling.  Added related templates.  Added PageTitle to and updated templates.  Started solidifying auth/admin nav.  Etc.

--- a/templates/admin/head.tmpl.html
+++ b/templates/admin/head.tmpl.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>{{ .AppName }} Administration</title>
+<title>{{ .AppName }}</title>
 
 <link rel="stylesheet" href="/assets/protected/css/mdl.io_1.0.4_blue-lightblue.min.css">
 <script src="/assets/public/js/material.min.js"></script>
