--- a/templates/base.tmpl.html
+++ b/templates/base.tmpl.html
@@ -18,7 +18,7 @@
             </div>
         </header>
         <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Title</span>
+            <span class="mdl-layout-title">{{ .AppName }}</span>
             <nav class="mdl-navigation">
                 {{ template "nav" .NavDrawer }}
             </nav>
