--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {{ include "/base.tmpl.html" }}
-{{ include "head.tmpl.html" }}
+{{ include "/head.tmpl.html" }}
 
 {{ define "content" }}
 <div class="mdl-grid">
     <div class="mdl-cell mdl-cell--4-col mdl-cell--1-col-tablet mdl-cell--0-col-phone"></div>
     <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet mdl-cell--12-col-phone">
-        <h1>{{ .AppName }} Administration</h1>
-        <p>{{ .Misc }}</p>
+        <h1>{{ .PageTitle }}</h1>
+        <p>Welcome, {{ .User }}</p>
     <div class="mdl-cell mdl-cell--4-col mdl-cell--0-col-tablet mdl-cell--0-col-phone"></div>
 </div>
 {{ end }}
