--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,7 +6,7 @@
     <div class="mdl-cell mdl-cell--4-col mdl-cell--1-col-tablet mdl-cell--0-col-phone"></div>
     <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet mdl-cell--12-col-phone">
         <h1>{{ .PageTitle }}</h1>
-        <p>Welcome, {{ .User }}</p>
+        <p>{{ .Misc }}</p>
     <div class="mdl-cell mdl-cell--4-col mdl-cell--0-col-tablet mdl-cell--0-col-phone"></div>
 </div>
 {{ end }}
