Added footer, dual footer nav, and related setup functions. Added index content and improved use of mdl.

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,5 +1,8 @@
 {{ include "/base.tmpl.html" }}
 {{ include "head.tmpl.html" }}
+{{ include "/nav.tmpl.html" }}
+{{ include "/footer.tmpl.html" }}
+{{ include "/nav_footer.tmpl.html" }}
 
 {{ define "content" }}
 <div class="mdl-grid">
