--- a/templates/head.tmpl.html
+++ b/templates/head.tmpl.html
@@ -6,7 +6,9 @@
 <title>{{ .AppName }}</title>
 
 <link rel="stylesheet" href="/assets/public/css/mdl.io_1.0.4_amber-orange.min.css">
+<link rel="stylesheet" href="/assets/public/css/mdl.io_1.0.4_amber-orange.custom.css">
 <script src="/assets/public/js/material.min.js"></script>
 <link rel="stylesheet" href="/assets/public/css/material_icons.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en' rel='stylesheet' type='text/css'>
 <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 {{ end }}
