--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,11 @@
 {{ include "/base.tmpl.html" }}
 {{ include "/head.tmpl.html" }}
+{{ include "/nav.tmpl.html" }}
+{{ include "/footer.tmpl.html" }}
+{{ include "/nav_footer.tmpl.html" }}
 
 {{ define "content" }}
-<div class="mdl-grid">
+<div class="mdl-grid" style="min-height: 480px">
     <div class="mdl-cell mdl-cell--4-col mdl-cell--1-col-tablet mdl-cell--0-col-phone"></div>
     <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet mdl-cell--12-col-phone">
         <h1>{{ .PageTitle }}</h1>
