--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -1,5 +1,8 @@
 {{ include "/base.tmpl.html" }}
 {{ include "head.tmpl.html" }}
+{{ include "/nav.tmpl.html" }}
+{{ include "/footer.tmpl.html" }}
+{{ include "/nav_footer.tmpl.html" }}
 
 {{ define "content" }}
 <div class="mdl-grid">
