--- a/templates/nav.tmpl.html
+++ b/templates/nav.tmpl.html
@@ -1,8 +1,8 @@
 {{ define "nav" }}
-    {{ range .NavCommonItems }}
-        <a class="mdl-navigation__link" href="{{ .HRef }}">{{ .Name }}</a>
-    {{ end }}
-    {{ range .NavSpecialItems }}
-        <a class="mdl-navigation__link" href="{{ .HRef }}">{{ .Name }}</a>
-    {{ end }}
+{{ range .ItemsCommon }}
+    <a class="mdl-navigation__link" href="{{ .HRef }}">{{ .Name }}</a>
+{{ end }}
+{{ range .ItemsSpecial }}
+    <a class="mdl-navigation__link" href="{{ .HRef }}">{{ .Name }}</a>
+{{ end }}
 {{ end }}
