Setup Angular2 starter project.

--- a/front/templates/admin/login.html
+++ b/front/templates/admin/login.html
@@ -1,1 +1,7 @@
-{{ include "/login.html" }}
+{{ include "/base.tmpl.html" }}
+{{ include "/head.tmpl.html" }}
+{{ include "/nav.tmpl.html" }}
+{{ include "/footer.tmpl.html" }}
+{{ include "/nav_footer.tmpl.html" }}
+{{ include "/scripts_body.tmpl.html" }}
+{{ include "/login.tmpl.html" }}
