--- a/front/templates/admin/index.html
+++ b/front/templates/admin/index.html
@@ -3,6 +3,7 @@
 {{ include "/nav.tmpl.html" }}
 {{ include "/footer.tmpl.html" }}
 {{ include "/nav_footer.tmpl.html" }}
+{{ include "scripts_body.tmpl.html" }}
 
 {{ define "content" }}
 <div class="mdl-grid">
@@ -10,6 +11,9 @@
     <div class="mdl-cell mdl-cell--4-col mdl-cell--6-col-tablet mdl-cell--12-col-phone">
         <h1>{{ .PageTitle }}</h1>
         <p>Welcome, {{ .User }}</p>
+        <app>
+            Loading...
+        </app>
     <div class="mdl-cell mdl-cell--4-col mdl-cell--0-col-tablet mdl-cell--0-col-phone"></div>
 </div>
 {{ end }}
