--- a/front/templates/admin/users.html
+++ b/front/templates/admin/users.html
@@ -3,6 +3,7 @@
 {{ include "/nav.tmpl.html" }}
 {{ include "/footer.tmpl.html" }}
 {{ include "/nav_footer.tmpl.html" }}
+{{ include "scripts_body.tmpl.html" }}
 
 {{ define "content" }}
 <div class="mdl-grid">
